# Freight-Fate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Freight-fate.nvgt  LICENSE  README.md  ROADMAP.md  Trucker.nvgt  debug_output.txt  driving_system.nvgt  enrichment-run-questions.txt  error.txt  freight-fate roadmap.txt  game_data.nvgt  game_menus.nvgt  game_state.nvgt  input.nvgt  knowledge.md  live_err.txt  map_inventory.txt  menu_manager.nvgt  nvgt_llm_rules.md  nvgt_rules.md  online_api_test_results.json  output.txt  publish_herenow.py  pyproject.toml  random_events.nvgt  requirements.txt  setup.py  sound_manager.nvgt  test_imports.py  test_sral.py  test_sral_init.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  ci.yml  retry-failed-nightly.yml  test-suite.yml  test.yml
Freight-fate/: menu_manager.nvgt
data/: cities.json  routes.py
data/settings/: game_settings.json
data/spider/: corridors.json  gap-legs-fuel.txt  signage-todo.md  truck-access-gap-report-break.json  truck-access-gap-report-fuel.json  truck-access-gap-report-sleep.json  truck-access-gap-report.json  vehicle-access-cache.json
data/spider/gap-fill/: HANDOFF.md  PROGRAM.md  gap-corridor-2026-07-09.txt  gap-corridor-2026-07-10.txt  gap-corridor-2026-07-10b.txt  (+9 more)
docs/: 1.9-buff-system-design.md  1.9-buffs-driving-hooks.patch  alpha-test-book.md  billboard-spider-methodology.md  business-arc.md  curve-geometry-schema-strawman.md  curve-geometry-straw-review.md  eld-home-terminal-design.md  field-recording-shot-list.md  freight-market-facilities.md  highway-spider-brief.md  highway-spider-methodology.md  jake-marker-implementation-brief.md  lane-data-brief.md  lanes-harvest-brief.md  map-enrichment-recipe.md  nav-phrasing-brief.md  osm-routing-plan.md  per-truck-wear-migration.md  physics-playtest-checklists.md  profile-invariants.md  radio-sweep-brief.md  rebake-briefs-2026-07-14.md  refresh-city-service-data.md  road-journal-career-1.9-plan.md  route-stop-data.md  server-integrity-handoff.md  sound-hunt-brief.md  sound-shortlist.md  steering-sound-rfc.md  surface-roads-plan.md  terrain-audit-brief.md  truck-access-sweep-brief.md  truck-speed-limit-audit.md  user-manual-1.9-draft.md  user-manual.md  village-callouts-brief.md  weather-wiper-audio-notes.md
logs/: playtest_log  playtest_log.prev
sound-test/: air_fallback.py  brake_banks.py  brake_hiss_synth.py  brake_rr.py  brake_trim.py  cand_common.py  cand_hybrid.py  cand_modal.py  cand_msint.py  cand_psgran.py  cand_psola.py  cand_pvfp.py  cand_sms.py  cruise_neutral.py  edge_nav.py  elevenlabs-prompts.md  encode_pack.py  engine_896.py  engine_band_flatten.py  engine_donor_scan.py  engine_fallback_midhigh.py  engine_formants.py  engine_high_formant.py  engine_low_950.py  engine_midhigh_1425.py  engine_mix.py  engine_phase1.py  engine_ring_formant.py  engine_start.py  engine_v1.py  gravel_granular.py  jake_v2.py  jake_v3.py  lane_line.py  pressurize.py  pulse_synth.py  rumble_v2.py  rumble_v3.py  shift_896.py  shift_clutch.py  (+3 more)
src/: main.py  sral_tts.py  sral_wrapper.py  test_sral.py  test_sral_integration.py
src/audio/: sound_manager.py
src/data/: cities.json  routes.py
src/freight_fate/: __init__.py  achievements.py  app.py  assets_pack.py  audio.py  audio_fades.py  audio_loops.py  cloud_save_integrity.py  cloud_saves.py  controller.py  controller_diagnostics.py  discord_presence.py  engine_audio.py  input_hints.py  music.py  net.py  online_journal.py  online_presence.py  playtest_levers.py  profile_integrity_invariants.py  profile_invariants.py  radio.py  radio_browser.py  radio_discovery.py  radio_url_safety.py  rumble.py  settings.py  single_instance.py  speech.py  units.py  updater.py
src/game/: economy.py  help_system.py  job_board.py  jobs.py  location_selector.py  map_view.py  menu.py  objectives.py  pause_menu.py  route_selector.py  settings.py  settings_menu.py  sound_manager.py  truck.py  tutorial_objectives.py  ui_elements.py
src/utils/: generate_silent_wav.py
straw/: STRAW-RECORD.md  straw-summary.json
tests/: asset_helpers.py  career_1_9_scenarios.py  conftest.py  driving_feature_helpers.py  playtest_harness.py  test_achievements.py  test_amenities.py  test_announcements.py  test_audio_backends.py  test_audio_fades.py  test_audio_loops.py  test_bake_world.py  test_baked_data.py  test_big_bucks.py  test_billboards.py  test_buffs.py  test_build_city_services_tool.py  test_build_interchanges_tool.py  test_build_maxspeed_tool.py  test_build_release.py  test_build_restrictions_tool.py  test_business_arc.py  test_career_1_9_checkpoints.py  test_career_1_9_persistent.py  test_career_1_9_surface.py  test_career_arc_achievements.py  test_career_arc_playtest.py  test_career_economy.py  test_career_level_guidance.py  test_career_objectives.py  test_career_pacing.py  test_career_start_options.py  test_career_stats.py  test_career_training.py  test_career_unlocks.py  test_cargo_and_lane.py  test_carrier_fleet.py  test_chain_law.py  test_city_keys.py  test_city_services.py  (+134 more)
tools/: _add_depth_states.py  _add_east_coast_collisions.py  _add_east_coast_nodes.py  bake_billboards.py  bake_curve_geometry.py  bake_data.py  bake_landmarks.py  bake_villages.py  bake_world.py  build_city_services.py  build_facility_approaches.py  build_facility_endpoints.py  build_interchanges.py  build_interchanges_base.py  build_interchanges_maxspeed.py  build_interchanges_rampcontrols.py  build_interchanges_restrictions.py  build_local_approaches.py  build_local_geometry.py  build_release.py  build_traffic_aadt.py  career_pacing.py  classify_vehicle_access.py  corridor_places.py  curate_route_pois.py  discover_route_pois.py  dump_save.py  encode_music_opus.py  enrich_routes.py  enrich_routes_base.py  enrich_routes_coverage.py  enrich_routes_landmarks.py  enrich_routes_ors.py  enrich_routes_pipeline.py  enrich_routes_pois.py  enrich_routes_states.py  export_profile_integrity_invariants.py  extract_osm_places.py  fetch_state_extracts.py  fill_sparse_legs_jasons_law.py  (+33 more)
(+478 files in other folders)
