[project]
name = "freight-fate"
version = "1.7.0"
description = "An accessible, audio-first cross-country trucking simulation game"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Orinks" }]
keywords = ["game", "accessibility", "audio-game", "screen-reader", "trucking", "simulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "pygame>=2.6",
    "prismatoid>=0.16",
    "numpy>=1.26",
    "certifi>=2024.7.4",
    "sound_lib @ git+https://github.com/samtupy/sound_lib_macos_fixes.git",
    # Optional Discord Rich Presence. Imported defensively: if it is ever
    # absent, or Discord is closed, the game still starts, plays, and exits.
    "pypresence>=4.3",
]

[project.scripts]
freight-fate = "freight_fate.app:main"

[project.urls]
Repository = "https://github.com/Orinks/Freight-fate"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "soundfile>=0.14.0",
]
build = [
    "nuitka>=4.0.8",
]
# Build-time route-enrichment tooling only (tools/enrich_routes.py --ors-smoke
# and ORS-backed corridor generation). Never a runtime dependency, so the
# shipped game stays dependency-light. Run with `uv run --group tooling ...`.
tooling = [
    "osmium>=4.0.2",
    "openrouteservice>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freight_fate"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Per-test timeout (thread method works on Windows) so a hung simulation fails
# fast with a stack trace instead of stalling the whole run.
addopts = "-q --timeout=120 --timeout-method=thread"
markers = [
    "smoke: headless end-to-end smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
