[project]
name = "freight-fate"
version = "1.8.5"
description = "An accessible, audio-first cross-country trucking simulation game"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Orinks" }]
keywords = ["game", "accessibility", "audio-game", "screen-reader", "trucking", "simulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "pygame>=2.6",
    "prismatoid>=0.16",
    "numpy>=1.26",
    "certifi>=2024.7.4",
    "cryptography>=45.0",
    "sound_lib @ git+https://github.com/samtupy/sound_lib_macos_fixes.git",
    # Optional Discord Rich Presence. Imported defensively: if it is ever
    # absent, or Discord is closed, the game still starts, plays, and exits.
    "pypresence>=4.3",
]

[project.scripts]
freight-fate = "freight_fate.app:main"
# Controller input diagnostic: logs the game's GameController events alongside
# the raw joystick layer to a file, for tracking down pads (e.g. DualSense)
# whose triggers/shoulders do not map through. Run: uv run controller-diagnostics
controller-diagnostics = "freight_fate.controller_diagnostics:main"

[project.urls]
Repository = "https://github.com/Orinks/Freight-fate"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "ruff>=0.8",
    "soundfile>=0.14.0",
    "pre-commit>=4.6.0",
    "hypothesis>=6.155.7",
    "openrouteservice>=2.3.3",
    "osmium>=4.3.1",
]
build = [
    "nuitka>=4.0.8",
]
# Build-time route-enrichment tooling only (tools/enrich_routes.py --ors-smoke
# and ORS-backed corridor generation). Never a runtime dependency, so the
# shipped game stays dependency-light. Run with `uv run --group tooling ...`.
tooling = [
    "osmium>=4.0.2",
    "openrouteservice>=2.2.0",
]
# Controller input diagnostic (`uv run controller-diagnostics`). It reuses the
# game's own input stack, so it needs only the core pygame dependency; listed
# here so the group resolves standalone via `uv run --group controller-diagnostics`.
controller-diagnostics = [
    "pygame>=2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freight_fate"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Per-test timeout (thread method works on Windows) so a hung simulation fails
# fast with a stack trace instead of stalling the whole run.
addopts = "-q --timeout=120 --timeout-method=thread"
markers = [
    "property: property-based randomized tests",
    "smoke: headless end-to-end smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
